[package]
name = "codespan"
version = "0.11.1"
readme = "README.md"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Data structures for tracking locations in source code"
homepage = "https://github.com/brendanzab/codespan"
repository = "https://github.com/brendanzab/codespan"
documentation = "https://docs.rs/codespan"
edition = "2018"

[dependencies]
codespan-reporting = { path = "../codespan-reporting", version = "0.11.1" }
serde = { version = "1", optional = true, features = ["derive"]}

[dev-dependencies]
termcolor = { git = "https://github.com/aminya/termcolor.git", rev = "f4f1be1" }

[features]
serialization = ["serde", "codespan-reporting/serialization"]
